# duckling-chinese

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pom.xml  pyproject.toml  requirements.txt  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  index.md
docs/dimension/: act.md  age.md  area.md  blood-type.md  constellation.md  currency.md  date.md  digit-sequence.md  distance.md  duplicate.md  duration.md  episode.md  fraction.md  gender.md  index.md  level.md  lyric.md  multi-char.md  multiple.md  numeral.md  ordinal.md  phone-number.md  place.md  quantity.md  rating.md  repeat.md  season.md  temperature.md  time.md  url.md  velocity.md
docs/ranker/: index.md  naive-bayes.md
duckling_chinese/: __init__.py  dimension.py  ranker.py  utils.py
test/: test_analyze.py  test_utils.py  utils.py
test/dimension/: test_area.py  test_constellation.py  test_currency.py  test_date.py  test_digit_sequence.py  test_distance.py  test_duplicate.py  test_gender.py  test_level.py  test_lyric.py  test_multiple.py  test_numeral.py  test_ordinal.py  test_phone_number.py  test_quantity.py  test_repeat.py  test_temperature.py  test_time.py
tests/: utils.py
tests/dimension/: test_act.py  test_age.py  test_blood_type.py  test_duration.py  test_episode.py  test_fraction.py  test_lyric.py  test_multi_char.py  test_place.py  test_rating.py  test_season.py  test_url.py  test_velocity.py
